create sidebar where adding dish types and cooks filters, also fix and update base.html and dish_list.html

--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -3,21 +3,27 @@
 {% block content %}
   <h1>Dish list</h1>
 
-    <table class="table table-bordered">
-      <tr>
+    <table class="table  table-hover">
+      <thead class="table-light">
+        <tr>
         <th>Name of the dish</th>
         <th>Type of dish</th>
         <th>Price</th>
         <th>Number of cooks</th>
       </tr>
-      {% for dish in dishes %}
-        <tr>
-          <td><a href="{{ dish.get_absolute_url }}">{{ dish.name }}</a></td>
-          <td>{{ dish.dish_type.name }}</td>
-          <td>{{ dish.price }}</td>
-          <td>{{ dish.cooks.count }}</td>
-        </tr>
-      {% endfor %}
+      </thead>
+
+      <tbody>
+        {% for dish in dishes %}
+          <tr>
+            <td><a href="{{ dish.get_absolute_url }}">{{ dish.name }}</a></td>
+            <td>{{ dish.dish_type.name }}</td>
+            <td class="text-end">{{ dish.price }}</td>
+            <td class="badge bg-secondary">{{ dish.cooks_count }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+
     </table>
 
 {% endblock %}
