--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,14 @@
 </head>
 
 <body>
-<div class="container-fluid">
+<div class="container py-4">
   <div class="row">
     <div class="col-sm-2">
-
+      {% block sidebar %}
+        {% include "includes/sidebar.html" %}
+      {% endblock %}
     </div>
+
     <div class="col-sm-10 ">
 
       {% block content %}{% endblock %}
