Add DishCreateView with form DishForm

--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Dish list</h1>
+  <h1>
+    Dish list
+    <a href="{% url 'kitchen:dish-create' %}" class="btn btn-primary link-to-page">
+      Create
+    </a>
+  </h1>
 
   <form action="" method="get">
     <div class="col-md-6">
