--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,13 @@
     </div>
 
     <div class="col-sm-10 ">
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">
+          {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
 
       {% block content %}{% endblock %}
 
