--- a/templates/kitchen/dish_detail.html
+++ b/templates/kitchen/dish_detail.html
@@ -6,6 +6,7 @@
 
       <h2 class="card-title mb-3">
         {{ dish.name }}
+
       </h2>
 
       <h3 class="mb-3">Type of dish: <span class="badge bg-primary">{{ dish.dish_type }}</span></h3>
@@ -18,7 +19,6 @@
 
       <h5 class="mt-3">Ingredients</h5>
 
-      {% if dish.ingredients.exists %}
         {% with items=dish.dishingredient_set.all %}
           {% if items %}
             <ul class="list-group list-group-flush mb-3">
@@ -36,9 +36,30 @@
             <p class="text-muted mb-3">No ingredients yet.</p>
           {% endif %}
         {% endwith %}
-      {% endif %}
 
       <hr>
+      {% if user in dish.cooks.all %}
+
+      <h5>Invite cook</h5>
+
+      <form method="post" action="{% url 'kitchen:cook-invite' pk=dish.id %}">
+        {% csrf_token %}
+
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            name="username"
+            class="form-control"
+            placeholder="Enter username"
+            required
+          >
+          <button class="btn btn-success" type="submit">
+           Invite
+          </button>
+        </div>
+      </form>
+
+      {% endif %}
 
       {% if user in dish.cooks.all %}
         <a href="{% url 'kitchen:dish-update' pk=dish.id %}" class="btn btn-primary link-to-page mt-2">
