--- a/templates/kitchen/dish_list.html
+++ b/templates/kitchen/dish_list.html
@@ -38,6 +38,7 @@
     </div>
   </form>
 
+  {% if dishes %}
   <table class="table  table-hover">
       <thead class="table-light">
         <tr>
@@ -60,5 +61,9 @@
       </tbody>
 
     </table>
+    {% else %}
+      <hr>
+      <h3 class="h3 mt-2">There is no dish.</h3>
+    {% endif %}
 
 {% endblock %}
