Add CookDetailView with MultipleObjectMixin (pagination) and praparation Type Manager

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -45,9 +45,18 @@
 
 <br>
 
+<a href="#"
+   class="list-group-item text-middle badge">
+  Type Manager
+</a>
+
+<br>
+
 {% if user.is_authenticated %}
 
-  <li class="list-group-item badge">Cook: {{ user.get_username }}</li>
+  <li class="list-group-item badge">
+    <a href="{{ user.get_absolute_url }}">Cook: {{ user.get_username }}</a>
+  </li>
   <li class="list-group-item badge">
     <form method="post" action="{% url 'logout' %}">
       {% csrf_token %}
