--- a/templates/kitchen/cook_detail.html
+++ b/templates/kitchen/cook_detail.html
@@ -2,9 +2,10 @@
 
 {% block content %}
   <h2 class="mb-0">{{ cook.first_name }} {{ cook.last_name }}</h2>
-<p class="text-muted mb-1"><strong>Username:</strong> {{ cook.get_username }}</p>
+<p class="text-muted mb-1"><strong>Username:</strong> <a href="{% url 'kitchen:cook-update' %}">{{ cook.get_username }}</a></p>
 <p class="mb-1"><strong>Years of experience:</strong> {{ cook.years_of_experience|default:"—" }}</p>
-<p class="mt-0"><strong>Is staff:</strong> {{ cook.is_staff }}</p>
+<p class="mb-1"><strong>Is staff:</strong> {{ cook.is_staff }}</p>
+<p><strong>Years of experience:</strong> {{ cook.email|default:"—" }}</p>
 
 <hr>
 
