Add DishTypeListView as a reference to button - Type Manager

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -45,7 +45,7 @@
 
 <br>
 
-<a href="#"
+<a href="{% url 'kitchen:dish_type-list' %}"
    class="list-group-item text-middle badge">
   Type Manager
 </a>
