--- a/templates/kitchen/dish_form.html
+++ b/templates/kitchen/dish_form.html
@@ -17,7 +17,8 @@
       </div>
     {% endfor %}
 
-      <input type="submit" value="{% if object %}Save{% else %}Create{% endif %}" class="btn btn-primary">
+    <input type="submit" value="{% if object %}Save{% else %}Create{% endif %}" class="btn btn-primary">
+    <a class="btn btn-secondary" href="{% url 'kitchen:dish-list' %}">Cancel</a>
   </form>
 
 {% endblock %}
