--- a/templates/kitchen/dish_type_form.html
+++ b/templates/kitchen/dish_type_form.html
@@ -3,10 +3,11 @@
 
 
 {% block content %}
-  <h1>Create new type of dish</h1>
+  <h1>{% if object %}Update type of dish{% else %}Create new type of dish{% endif %}</h1>
   <form action="" method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <input type="submit" value="Add" class="btn btn-primary">
+    <input type="submit" value="{% if object %}Edit{% else %}Add{% endif %}" class="btn btn-primary">
+    <a class="btn btn-secondary" href="{% url 'kitchen:dish_type-list' %}">Cancel</a>
   </form>
 {% endblock %}
