--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-3">
   <h1 class="h3 mb-0">Dish types</h1>
-  <a class="btn btn-primary" href="#">
+  <a class="btn btn-primary" href="{% url 'kitchen:dish_type-create' %}">
     + Add type
   </a>
 </div>
@@ -17,7 +17,7 @@
 
           <div class="btn-group btn-group-sm" role="group">
             <a class="btn btn-outline-secondary"
-               href="#">Edit</a>
+               href="{% url 'kitchen:dish_type-update' pk=type.id %}">Edit</a>
             <a class="btn btn-outline-danger"
                href="#">Delete</a>
           </div>
