--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous">
-  <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
@@ -30,6 +29,38 @@
           {{ message }}
           </div>
         {% endfor %}
+      {% endif %}
+
+      {% if user.is_authenticated %}
+        <div class="card mb-3 shadow-sm">
+          <div class="card-body d-flex flex-wrap gap-2">
+
+            <a href="{% url 'kitchen:dish_type-list' %}"
+              class="btn btn-outline-primary btn-sm">
+              Type Manager
+            </a>
+
+            <a href="{% url 'kitchen:ingredient-list' %}"
+              class="btn btn-outline-primary btn-sm">
+              Ingredient Manager
+            </a>
+
+            <a href="{{ user.get_absolute_url }}"
+              class="btn btn-outline-secondary btn-sm">
+              {{ user.get_username }}
+            </a>
+
+            <form method="post"
+                  action="{% url 'logout' %}">
+              {% csrf_token %}
+              <button type="submit"
+                      class="btn btn-outline-danger btn-sm">
+                Logout
+              </button>
+            </form>
+
+          </div>
+        </div>
       {% endif %}
 
       {% block content %}{% endblock %}
