--- a/templates/includes/setting.html
+++ b/templates/includes/setting.html
@@ -1,5 +1,5 @@
 {% if user.is_authenticated %}
-<div class="card mb-3 shadow-sm">
+<div class="card mb-3 shadow-sm setting-bar">
   <div class="card-body d-flex flex-wrap gap-2">
 
     <a href="{% url 'kitchen:dish_type-list' %}"
