--- a/templates/base.html
+++ b/templates/base.html
@@ -6,39 +6,47 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous">
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+        crossorigin="anonymous">
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
 <body>
-<div class="container py-4">
+<div class="container py-4 sidebar-card">
   <div class="row">
+
     <div class="col-sm-2">
       {% block sidebar %}
-        {% include "includes/sidebar.html" %}
+      {% include "includes/sidebar.html" %}
       {% endblock %}
     </div>
 
-    <div class="col-sm-10 ">
+    <div class="col-sm-10">
       {% if messages %}
-        {% for message in messages %}
-          <div class="alert alert-{{ message.tags }}">
-          {{ message }}
-          </div>
-        {% endfor %}
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+      </div>
+      {% endfor %}
       {% endif %}
 
-      {% block setting %}
+      <div class="toolbar">
+        {% block setting %}
         {% include "includes/setting.html" %}
-      {% endblock %}
+        {% endblock %}
+      </div>
 
-      {% block content %}{% endblock %}
+
+      <div class="main-content">
+        {% block content %}{% endblock %}
+      </div>
+
+      <br>
 
       {% block pagination %}
-        {% include "includes/pagination.html" %}
+      {% include "includes/pagination.html" %}
       {% endblock %}
 
     </div>
