--- a/templates/kitchen/cook_update_form.html
+++ b/templates/kitchen/cook_update_form.html
@@ -2,12 +2,30 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <h1>Edit profile</h1>
+<div class="form-wrap">
+  <div class="card shadow-sm form-card">
+    <div class="card-header bg-white">
+      <h1 class="h4 mb-0">Edit profile</h1>
+    </div>
 
-  <form method="post" novalidate>
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a class="btn btn-secondary" href="{% url 'kitchen:cook-detail' pk=user.pk %}">Cancel</a>
-  </form>
+    <div class="card-body">
+      <form method="post" novalidate>
+        {% csrf_token %}
+
+        {{ form|crispy }}
+
+        <div class="form-actions mt-4 d-flex justify-content-end">
+          <a class="btn btn-outline-secondary mr-2"
+             href="{% url 'kitchen:cook-detail' pk=request.user.pk %}">
+            Cancel
+          </a>
+
+          <button type="submit" class="btn btn-primary">
+            Save
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
