--- a/templates/kitchen/dish_type_form.html
+++ b/templates/kitchen/dish_type_form.html
@@ -1,13 +1,47 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-
 {% block content %}
-  <h1>{% if object %}Update type of dish{% else %}Create new type of dish{% endif %}</h1>
-  <form action="" method="post">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input type="submit" value="{% if object %}Edit{% else %}Add{% endif %}" class="btn btn-primary">
-    <a class="btn btn-secondary" href="{% url 'kitchen:dish_type-list' %}">Cancel</a>
-  </form>
+
+<div class="form-wrap">
+
+  <div class="card shadow-sm form-card">
+
+    <div class="card-header bg-white">
+      <h1 class="h4 mb-0">
+        {% if object %}
+          Update "{{ object.name }}"
+        {% else %}
+          Create new type of dish
+        {% endif %}
+      </h1>
+    </div>
+
+    <div class="card-body">
+
+      <form method="post" novalidate>
+        {% csrf_token %}
+
+        {{ form|crispy }}
+
+        <div class="form-actions mt-4 d-flex justify-content-end">
+
+          <a href="{% url 'kitchen:dish_type-list' %}"
+             class="btn btn-outline-secondary mr-2">
+            Cancel
+          </a>
+
+          <button type="submit" class="btn btn-primary">
+            {% if object %}Save{% else %}Create{% endif %}
+          </button>
+
+        </div>
+
+      </form>
+
+    </div>
+  </div>
+
+</div>
+
 {% endblock %}
