--- a/templates/kitchen/dish_type_list.html
+++ b/templates/kitchen/dish_type_list.html
@@ -1,47 +1,47 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="d-flex justify-content-between align-items-center mb-3">
+<div class="d-flex justify-content-between align-items-center mb-3 page-header">
   <h1 class="h3 mb-0">Dish types</h1>
   <a class="btn btn-primary" href="{% url 'kitchen:dish_type-create' %}">
     + Add type
   </a>
 </div>
 
-  <form action="" method="get">
-    <div class="row col-md-6">
-      <input
-        type="text"
-        name="search"
-        class="form-control"
-        value="{{ search_query }}"
-      >
-    </div>
+  <form action="" method="get" class="mb-3">
+    <div class="form-row align-items-center">
+      <div class="col-md-6 mb-2 mb-md-0">
+        <input
+          type="text"
+          name="search"
+          class="form-control"
+          value="{{ search_query|default_if_none:'' }}"
+        >
+      </div>
 
-    <div class="row col-md-auto">
-      <button type="submit" class="btn btn-primary mt-2">
-        Search
-      </button>
+       <div class="col-auto">
+        <button type="submit" class="btn btn-primary">
+          Search
+        </button>
 
-      <a href="{% url 'kitchen:dish_type-list' %}" class="btn btn-outline-secondary mt-2 ml-2">
-        Reset
-      </a>
+        <a href="{% url 'kitchen:dish_type-list' %}" class="btn btn-outline-secondary ml-2">
+          Reset
+        </a>
+      </div>
     </div>
   </form>
 
-<br>
-
-<div class="card shadow-sm mb-4">
+<div class="card shadow-sm mb-4 type-card">
   <div class="card-body p-0">
-    <div class="list-group list-group-flush">
+    <div class="list-group list-group-flush type-list">
       {% for type in types %}
         <div class="list-group-item d-flex justify-content-between align-items-center">
-          <div class="fw-semibold">{{ type.name }}</div>
+          <div class="font-weight-bold">{{ type.name }}</div>
 
           <div class="btn-group btn-group-sm" role="group">
-            <a class="btn btn-outline-secondary"
+            <a class="btn btn-outline-secondary mr-1"
                href="{% url 'kitchen:dish_type-update' pk=type.id %}">Edit</a>
-            <a class="btn btn-outline-danger"
+            <a class="btn btn-outline-danger btn-light"
                href="{% url 'kitchen:dish_type-delete' pk=type.id %}">Delete</a>
           </div>
         </div>
