--- a/templates/kitchen/ingredient_list.html
+++ b/templates/kitchen/ingredient_list.html
@@ -8,38 +8,40 @@
   </a>
 </div>
 
-  <form action="" method="get">
-    <div class="row col-md-6">
-      <input
-        type="text"
-        name="search"
-        class="form-control"
-        value="{{ search_query }}"
-      >
+  <form action="" method="get" class="mb-3">
+    <div class="form-row align-items-center">
+      <div class="col-md-6 mb-2 mb-md-0">
+        <input
+          type="text"
+          name="search"
+          class="form-control"
+          placeholder="Search ingredients..."
+          value="{{ search_query|default_if_none:'' }}"
+        >
+      </div>
+
+      <div class="col-auto">
+        <button type="submit" class="btn btn-primary">
+          Search
+        </button>
+
+        <a href="{% url 'kitchen:ingredient-list' %}" class="btn btn-outline-secondary ml-2">
+          Reset
+        </a>
+      </div>
     </div>
 
-    <div class="row col-md-auto">
-      <button type="submit" class="btn btn-primary mt-2">
-        Search
-      </button>
-
-      <a href="{% url 'kitchen:ingredient-list' %}" class="btn btn-outline-secondary mt-2 ml-2">
-        Reset
-      </a>
-    </div>
   </form>
 
-<br>
-
-<div class="card shadow-sm mb-4">
+<div class="card shadow-sm mb-4 type-card">
   <div class="card-body p-0">
-    <div class="list-group list-group-flush">
+    <div class="list-group list-group-flush type-list">
       {% for ingredient in ingredients %}
         <div class="list-group-item d-flex justify-content-between align-items-center">
-          <div class="fw-semibold">{{ ingredient.name }}</div>
+          <div class="font-weight-bold">{{ ingredient.name }}</div>
 
           <div class="btn-group btn-group-sm" role="group">
-            <a class="btn btn-outline-secondary"
+            <a class="btn btn-outline-secondary mr-1"
                href="{% url 'kitchen:ingredient-update' pk=ingredient.id %}">
               Edit
             </a>
